libs/parser/testdata/errors/source_invalid_version.csl
source:
  alias: 'bad-provider'
  type: 'terraform'
  version: 'v1.2'
  region: 'us-west-2'
